# python-openapi-generator-rust

./: Cargo.toml  do_release.sh  release.sh
.github/workflows/: test.yml
cli/py/: build.sh  pyproject.toml
plugin/py-binding/: Cargo.toml  build.sh  install.sh  pyproject.toml
src/: lib.rs
test/cli/: test.sh
