[build-system]
requires = ["maturin"]
build-backend = "maturin"

[project]
name = "trustspecpy"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
